--------------------------------------------------------------------------------
shmuel 2024-04-27 16:37:38+03:00 - build 6317

1. Macro-API: add the following function to mf table:
              fileassociations, filehighlight, filepanelmodes, foldershortcuts.

--------------------------------------------------------------------------------
drkns 2024-04-26 19:16:40+01:00 - build 6316

1. Correction of 6274.

--------------------------------------------------------------------------------
johnd0e 2024-04-26 19:10:24+01:00 - build 6315

1. gh-707 / M2856: Improve dead keys detection to allow key combinations with AltGr / LCtrlRAlt.

--------------------------------------------------------------------------------
drkns 2024-04-23 23:43:58+01:00 - build 6314

1. Show elevation status in InfoPanel.

2. Exception handling improvements.

3. Fix mapping of OEM keys to US keyboard and pass current layout to mapping functions.

--------------------------------------------------------------------------------
drkns 2024-04-19 18:28:14+01:00 - build 6313

1. New versions of fmt, tinyxml2, Catch2 and character width mappings.

2. Remove duplicated code.

3. Warnings.

--------------------------------------------------------------------------------
drkns 2024-04-17 21:09:16+01:00 - build 6312

1. Reshape Attributes dialog.

2. Add FILE_ATTRIBUTE_DEVICE to Filters.

3. A few minor fixes.

--------------------------------------------------------------------------------
shmuel 2024-04-17 00:53:14+03:00 - build 6311

1. Macro-API: fix CmdLine.CurPos

--------------------------------------------------------------------------------
yjh 2024-04-16 11:49:47+03:00 - build 6310

1. SQLite v3.45.3

--------------------------------------------------------------------------------
drkns 2024-04-15 18:15:01+01:00 - build 6309

1. Fix enum_processes last entry population.

2. Logging improvements.

--------------------------------------------------------------------------------