@@ -1,4 +1,11 @@
 --------------------------------------------------------------------------------
+drkns 2024-04-28 13:28:25+01:00 - build 6318
+
+1. Correctly handle repeated key event records.
+
+2. Refactoring.
+
+--------------------------------------------------------------------------------
 shmuel 2024-04-27 16:37:38+03:00 - build 6317
 
 1. Macro-API: add the following function to mf table:
